# rusty-pi-blocker

./: .gitignore  Cargo.toml  README.md  analysis.py  blocked_domains.txt
server/: Cargo.toml  blocked_domains.txt  test_blocked_domains.txt
server/src/: blocklist.rs  cli.rs  dns_server.rs  lib.rs  logger.rs  main.rs  server_control.rs
server/tests/: test_blocklist.rs  tests.rs
src/: analysis.rs  cli.rs  dns_server.rs  error.rs  lib.rs  main.rs  server_control.rs
tests/: tests.rs
